--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
     
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-database.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-database.js"></script>
+
 
 <script>
-  // Your web app's Firebase configuration
+ 
   var firebaseConfig = {
-    apiKey: "AIzaSyD6oVjtrWiSZlD_lsFji8faxGH9UwDeNNY",
-    authDomain: "pro-project-c-34.firebaseapp.com",
-    databaseURL: "https://pro-project-c-34.firebaseio.com",
-    projectId: "pro-project-c-34",
-    storageBucket: "pro-project-c-34.appspot.com",
-    messagingSenderId: "598019059600",
-    appId: "1:598019059600:web:b6072995a6ef91f4aecd15"
+    apiKey: "AIzaSyAqnP6NYcri4fE23MHmqQ6w-PqsWW44L8c",
+    authDomain: "pro35-2b998.firebaseapp.com",
+    databaseURL: "https://pro35-2b998.firebaseio.com",
+    projectId: "pro35-2b998",
+    storageBucket: "pro35-2b998.appspot.com",
+    messagingSenderId: "559657712604",
+    appId: "1:559657712604:web:a721b4186014d421606d19"
   };
-  // Initialize Firebase
+ 
   firebase.initializeApp(firebaseConfig);
 </script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
